Fixing line-height spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -274,6 +274,7 @@ p {
       font-size: 85%;
       color: $color-gray;
       font-family: $font-title;
+      margin-bottom: 0.25rem;
     }
 
     .title {
@@ -281,6 +282,7 @@ p {
       margin-bottom: -1px;
       font-family: $font-title;
       font-size: $font-size;
+      line-height: 1;
     }
 
     &:first-child {
